--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,18 +24,7 @@
             margin: 0;
         }
     }
-    .content-Sidebar{
-        width: 241px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        position: static;
-        background: var(---ffffff) 0% 0% no-repeat padding-box;
-        background: #FFFFFF 0% 0% no-repeat padding-box;
-        box-shadow: 0px 3px 6px #00000029;
-        flex: none;
-        order: 0;
-        flex-grow: 1;
+    
         .navbar-from-sidebar{
             background-color:#004B40 ;
             height: 63px;
@@ -49,7 +38,26 @@
                 height: 33px;
             }
         }
-    }
+        .profile-flex{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            margin-top: 16px;
+            margin-bottom: 16px;
+            .user-profile{
+                width: 87px;
+                height: 87px;
+                border-radius: 50%;
+                background: #D1FBD9 0% 0% no-repeat padding-box;
+                box-shadow: 0px 3px 8px #00000029;
+                opacity: 1;
+                margin-bottom: 16px;
+            }
+        }
+        
+    
     .content-body {
         display: flex;
         flex-direction: column;
@@ -61,6 +69,14 @@
             overflow-y: scroll;
         }
     }
+}
+
+::ng-deep.p-sidebar .p-sidebar-content{
+    padding: 0;
+}
+
+::ng-deep.p-sidebar .p-sidebar-header{
+    padding: 0;
 }
 
 ::ng-deep.p-button:enabled:hover {
@@ -93,3 +109,28 @@
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
 }
+
+::ng-deep.p-panelmenu .p-panelmenu-header > a{
+    background: var(---ffffff) 0% 0% no-repeat padding-box;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    opacity: 1;
+}
+
+::ng-deep.p-panelmenu .p-panelmenu-header.p-highlight > a{
+    color: #004B40;
+}
+
+::ng-deep.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link .p-menuitem-text{
+    color: #004B40;
+    font-size: 16px;
+}
+
+::ng-deep.p-panelmenu .p-panelmenu-header.p-highlight:not(.p-disabled) > a:hover{
+    background: #004B40;
+    color: #FFFFFF;
+}
+
+::ng-deep.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link:not(.p-disabled):hover{
+    background: #D1D1D1 0% 0% no-repeat padding-box;
+}
+
