--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,22 @@ body{
 }
 
 
+.validation-errors{
+    margin-top: 6px;
+    .error-message{
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 120%;
+        color: red
+    }
+ 
+    .carater{
+        font-size: 12px;
+        color: #666
+    }
+    .error-caracter{
+        font-size: 12px;
+        color: #666
+    }
+}
