--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="grid-login">
     <div class="div-info">
         <h1>¡Bienvenido a la herramienta de registro Coink!</h1>
-        <img src="" class="img1" alt="">
+        <img src="assets/img2.png" class="img1" alt="">
         <h2>Coink para tu día a día. Empieza ahorrando y cumple tus sueños con propósito.</h2>
-        <img src="" class="img2" alt="">
+        <img src="assets/img1.png" class="img2" alt="">
     </div>
     <div class="flex-form">
         <div class="inscribir">
